UI for LoginActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ZoloStays</string>
+    <string name="title_activity_login">ZoloStays</string>
+
+    <string name="hint_phone_number">PHONE NUMBER</string>
+    <string name="hint_password">PASSWORD</string>
+
+    <string name="txt_forgot_password">Forgot password?</string>
+
+    <string name="btn_login">Log in</string>
+    <string name="btn_create_account">Create Account</string>
 </resources>
