--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,12 @@
 
     <string name="hint_phone_number">PHONE NUMBER</string>
     <string name="hint_password">PASSWORD</string>
+    <string name="hint_email">EMAIL</string>
+    <string name="hint_full_name">FULL NAME</string>
 
     <string name="txt_forgot_password">Forgot password?</string>
+    <string name="txt_register">Register</string>
+    <string name="txt_register_zolo">Please register with Zolo to continue</string>
 
     <string name="btn_login">Log in</string>
     <string name="btn_create_account">Create Account</string>
@@ -13,6 +17,13 @@
     <string name="error_invalid_phone_number">Please enter a valid phone number</string>
     <string name="error_invalid_password">Please enter a valid password</string>
     <string name="error_invalid_credentials">Invalid credentials. Please try again!</string>
+    <string name="error_password_restriction">Password should be at least %d characters long</string>
+    <string name="error_invalid_email">Please enter a valid email</string>
+    <string name="error_invalid_name">Name should contain letters and spaces</string>
+    <string name="error_user_exists">User already exists! Please try logging in</string>
 
-    <item name="observable_data" type="id"/>
+    <string name="snackbar_logged_in">Logged in!</string>
+    <string name="snackbar_user_registered">Registration successful! Login to continue</string>
+
+    <item name="observable_data" type="id" />
 </resources>
